fix(events): align search checkboxes in single column on small screens
HH-459

--- a/apps/events-helsinki/src/domain/search/eventSearch/advancedSearch/search.module.scss
+++ b/apps/events-helsinki/src/domain/search/eventSearch/advancedSearch/search.module.scss
@@ -53,6 +53,14 @@ $buttonWidth: 180px;
     }
     @include breakpoints.respond-below(m) {
       grid-column: 1 / 3;
+      margin: var(--spacing-xs) 0;
+    }
+  }
+
+  .checkboxWrapper {
+    margin: var(--spacing-3-xs) 0;
+    @include breakpoints.respond-below(s) {
+      grid-column: 1 / 3;
     }
   }
 
